# portfolio-risk-platform

./: README.md  pyproject.toml
Examples/: data prep.py  ex_1_all.py
risklib/: __init__.py  pyproject.toml
risklib/backtesting/: breaches.py  chart.py  christoffersen.py  kupiec.py
risklib/correlation/: diversification.py  pca.py
risklib/es/: component.py  historical.py  marginal.py
risklib/liquidity/: liquity_adjusted.py
risklib/monte_carlo/: simulations.py
risklib/utils/: covariance.py  portfolio.py  returns.py  volatility.py
risklib/var1/: component.py  ewma.py  gaussian.py  historical.py  marginal.py  pct_contribution.py
